--- a/backend/package.json
+++ b/backend/package.json
@@ -2,19 +2,21 @@
   "name": "weather-backend",
   "version": "1.0.0",
   "main": "dist/server.js",
-"scripts": {
+  "scripts": {
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
-},
+  },
   "dependencies": {
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.0",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "ts-node-dev": "^2.0.0",
