--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,14 @@
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.17",
-    "@types/node": "^18.15.11",
+    "@types/dotenv": "^8.2.3",
+    "@types/express": "^4.17.23",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.19.123",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.9.2"
   }
 }
